# things-app-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
app/: things_client.py  tools.py
tests/: test_things_client.py
