[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "things-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0.2",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.13"
files = ["app"]
exclude = "^tests/"
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
